--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,60 @@
 }
 
 
+/* Navitagion Bar*/
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    padding: 10px 90px;
+    /* box-sizing: border-box; */
+    /* background: */
+    /* boarder-bottom: 1px solid #fff; */
+}
+
+nav .logo {
+    padding: 22px 20px;
+    height: 80px;
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+nav ul {
+    list-style: none;
+    float: right;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+nav ul li a {
+    line-height: 80px;
+    color: #fff;
+    padding: 12px 30px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+nav ul li a:hover {
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 6px;
+}
+
+section {
+    width: 100%;
+    height: 100vh;
+    background: url(assets/1.png);
+    background-size: cover;
+    background-position: center;
+}
+
+
 /*  */
