--- a/css/styles.css
+++ b/css/styles.css
@@ -21,23 +21,24 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
-    padding: 10px 10px;
+    height: 80px;
+    padding: 10px 20px;
     box-sizing: border-box;
     background: rgba(0, 0, 0, 0.5);
     font-size: 20px;
+    /* font-size: 15px; */
     /* letter-spacing: 2px; */
     /* border-bottom: 1px solid #fff; */
 }
 
 nav .logo {
-    padding: 22px 20px;
+    padding: 18px 20px;
     height: 80px;
     float: left;
     font-size: 24px;
-    font-weight: bold;
-    text-transform: uppercase;
+    /* font-weight: bold; */
     color: #fff;
+    text-transform: uppercase;
 }
 
 nav ul {
@@ -48,8 +49,11 @@ nav ul {
     display: flex;
 }
 
+nav ul li {
+    line-height: 60px;
+}
+
 nav ul li a {
-    line-height: 80px;
     color: #fff;
     padding: 12px 30px;
     text-decoration: none;
@@ -64,15 +68,12 @@ nav ul li a:hover {
 }
 
 nav ul li .btn {
-    line-height: 80px;
     color: rgb(0, 0, 0);
-    height: 60px;
-    margin-top: 10px;
     padding: 12px 30px;
     text-decoration: none;
-    /* font-weight: bold; */
     background: rgba(255, 255, 255, 0.8);
     border-radius: 6px;
+    /* font-weight: bold; */
     /* text-transform: uppercase; */
 }
 
