--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
 .sign-in {
     width: 100%;
     height: 100vh;
-    background: url('../assets/login.jpg');
+    background: url('../assets/3.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -239,7 +239,7 @@ footer .center {
     line-height: 60%;
     text-shadow: 5px 5px rgba(0, 0, 0, 0.7);
     margin-left: 50px;
-    margin-top: 440px;
+    margin-top: 430px;
     margin-bottom: 0px;
 }
 
@@ -248,7 +248,7 @@ footer .center {
     width: 60%;
     margin-left: 0px;
     margin-bottom: 0px;
-    padding: 75px 80px;
+    padding: 80px 80px;
     box-sizing: border-box;
     background: rgba(0, 0, 0, 0.5);
     margin-top: -4%;
