--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,13 @@ body {
     font-family: 'Garamond';
     width: 100%;
     height: 100vh;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     align-items: center;
+}
+
+.sign-in-page {
+    display: flex;
 }
 
 
