--- a/css/book-now-style.css
+++ b/css/book-now-style.css
@@ -49,10 +49,9 @@ body {
 .index-top {
     width: 100%;
     height: 50vh;
-    background: url('../assets/2.jpg');
+    background: url('../assets/1.png');
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
 }
 
 
