--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
     font-family: 'Garamond';
     width: 100%;
     height: 100vh;
-    /* display: flex; */
+    display: flex;
     justify-content: center;
     align-items: center;
 }
