--- a/css/styles.css
+++ b/css/styles.css
@@ -37,9 +37,8 @@ body {
     align-items: center;
 }
 
-.sign-in-page {
-    display: flex;
-}
+
+/* Selection */
 
 ::selection {
     color: #fff;
@@ -49,13 +48,19 @@ body {
 
 /* Divisions */
 
+.sign-in-page {
+    display: flex;
+    background: url('../assets/2.jpg');
+}
+
 .index-top {
     width: 100%;
     height: 100vh;
-    background: url('../assets/2.jpg');
+    /* background: url('../assets/2.jpg'); */
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    z-index: 2;
 }
 
 .sign-in {
@@ -74,7 +79,7 @@ body {
     position: relative;
     width: 900px;
     height: 550px;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.5);
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
@@ -86,7 +91,7 @@ body {
     width: 900px;
     height: 100%;
     padding-left: 260px;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.5);
     -webkit-transition: -webkit-transform 1.2s ease-in-out;
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out;
@@ -116,9 +121,9 @@ body {
     -webkit-transition-timing-function: ease-in-out;
     transition-timing-function: ease-in-out;
     -webkit-transition-duration: 1.2s;
-    transition-duration: 1.2s;
+    transition-duration: 1.6s;
     -webkit-transform: translate3d(640px, 0, 0);
-    transform: translate3d(640px, 0, 0);
+    transform: translate3d(940px, 0, 0);
 }
 
 .cont.s-signup .sign-up {
@@ -137,10 +142,32 @@ body {
 }
 
 
+/* Video Background */
+
+video {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.fullscreen-bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
+}
+
+
 /* Navitagion Bar*/
 
 nav {
-    font-family: 'Aadam'!important;
+    font-family: 'Aadam' !important;
     position: fixed;
     top: 0;
     left: 0;
@@ -190,10 +217,10 @@ nav ul li a {
     background: rgba(255, 255, 255, 0.8);
 }
 
-nav ul li a:hover,
-nav ul li .btn:hover {
-    border: 3px solid black;
-    padding: 9px 17px !important;
+nav ul li a:hover {
+    /* border: 3px solid black; */
+    text-decoration: underline;
+    /* padding: 9px 17px !important; */
     /* background: rgba(59, 59, 59, 0.8); */
     color: black !important;
     /* border-radius: 6px; */
@@ -209,6 +236,18 @@ nav ul li .btn {
     /* border-radius: 6px; */
     /* font-weight: bold; */
     /* text-transform: uppercase; */
+    color: #fff !important;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+nav ul li .btn:hover {
+    /* border: 3px solid black; */
+    text-decoration: underline;
+    /* padding: 9px 17px !important; */
+    /* background: rgba(59, 59, 59, 0.8); */
+    /* color: black !important; */
+    /* border-radius: 6px; */
+    /* background: rgba(255, 255, 255, 0.8); */
     color: #fff !important;
     background: rgba(0, 0, 0, 0.8);
 }
@@ -379,6 +418,10 @@ button {
     height: 40px;
 }
 
+.sign-up-consent {
+    font-size: 13px !important;
+}
+
 .img {
     overflow: hidden;
     z-index: 2;
@@ -388,6 +431,7 @@ button {
     width: 260px;
     height: 100%;
     padding-top: 360px;
+    opacity: 0.5;
 }
 
 .img:before {
@@ -397,7 +441,7 @@ button {
     top: 0;
     width: 900px;
     height: 100%;
-    background-image: url(images/bg.jpg);
+    opacity: 0.5;
     background-size: cover;
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
@@ -410,7 +454,7 @@ button {
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.9);
 }
 
 .img-text {
@@ -433,7 +477,7 @@ button {
 }
 
 .img-text p {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.5;
 }
 
