--- a/css/styles.css
+++ b/css/styles.css
@@ -364,7 +364,7 @@ button {
     margin: 0 auto;
     width: 260px;
     height: 36px;
-    border-radius: 30px;
+    /* border-radius: 30px; */
     color: #fff;
     font-size: 15px;
     cursor: pointer;
@@ -511,7 +511,7 @@ button {
     width: 100%;
     height: 100%;
     border: 2px solid #fff;
-    border-radius: 30px;
+    /* border-radius: 30px; */
 }
 
 .img-btn span {
