--- a/css/destination.css
+++ b/css/destination.css
@@ -47,16 +47,13 @@ img{
     font-size: 15px;
 }
 
-/*** for js **/
-
 .hidePara{
     display: none;
 }
 
-/**************/
-
 .info a{
     display: block;
+	border-radius: 5px;
     background: #fff;
     width: 50%;
     margin: 10px auto;
@@ -92,7 +89,6 @@ img{
     height: 40px;
 }
 
-/* media queries */
 
 @media screen and (max-width: 1170px){
     .container{
