--- a/css/accomodation.css
+++ b/css/accomodation.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Playfair Display', serif;
+   font-family: Helvetica;
 }
 html{
     scroll-behavior: smooth;
@@ -41,7 +41,7 @@ body{
     text-transform: uppercase;
     letter-spacing: 3px;
     font-size: 30px;
-    color: var(--black);
+    color: #413b3b;
     border-bottom: 5px solid var(--dark);
     width: 235px;
     margin: 15px 0;
@@ -64,18 +64,20 @@ body{
     flex: 30%;
     align-self: flex-start;
     font-size: 48px;
-    color: #252525;
+    color: #312d2c;
 }
 .service-content{
     padding-left: 20px;
 }
 .service-content h2{
     opacity: 0.7;
+
+
 }
 .service-content button{
     margin-left: 0;
     margin-right: 0;
-    background: black;
+    background: #312d2c;
     color: #fff;
 }
 @media(min-width: 992px){
@@ -101,7 +103,7 @@ body{
 .room{
     margin: 45px 0;
     padding-bottom: 25px;
-    background: var(--dark);
+    background: #413b3b;
     color: #fff;
 }
 .room-text{
@@ -109,17 +111,23 @@ body{
 }
 .room-text h3{
     font-size: 24px;
+	font-family: Helvetica;
 }
 .room-text ul{
     list-style-type: none;
     margin: 15px 0;
+	font-family: Helvetica;
 }
 .room-text ul li{
     padding: 7px 0;
 }
 .room-text ul li i{
-    color: var(--white);
+    color: var-#413b3b;
     margin-right: 10px;
+
+}
+.room-text button{
+	color: #221e1d;
 }
 .room-image{
     overflow: hidden;
