--- a/css/footer2.css
+++ b/css/footer2.css
@@ -24,7 +24,7 @@ ul{
     padding: 70px 0;
 }
 .footer-col{
-   width: 25%;
+   width: 30%;
    padding: 0 15px;
 }
 .footer-col h4{
@@ -40,7 +40,7 @@ ul{
 	position: absolute;
 	left:0;
 	bottom: -10px;
-	background-color: #e91e63;
+	background-color: #ffffff;
 	height: 2px;
 	box-sizing: border-box;
 	width: 50px;
