--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,8 @@ body {
 
 .sign-in-page {
     display: flex;
-    background: url('../assets/2.jpg');
+    background-color: #413b3b;
+    ;
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -60,7 +61,7 @@ body {
 
 .contact-us-page {
     display: flex;
-    background: url('../assets/3.jpg');
+    background-color: #413b3b;
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -99,7 +100,8 @@ body {
     position: relative;
     width: 900px;
     height: 550px;
-    background: rgba(255, 255, 255, 0.7);
+    background: #fff;
+    /* background: rgba(255, 255, 255, 0.7); */
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
@@ -111,7 +113,8 @@ body {
     width: 900px;
     height: 100%;
     padding-left: 260px;
-    background: rgba(255, 255, 255, 0.7);
+    background: #fff;
+    /* background: rgba(255, 255, 255, 0.7); */
     -webkit-transition: -webkit-transform 1.2s ease-in-out;
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out;
@@ -143,7 +146,7 @@ body {
     -webkit-transition-duration: 1.2s;
     transition-duration: 1.6s;
     -webkit-transform: translate3d(640px, 0, 0);
-    transform: translate3d(-940px, 0, 0);
+    transform: translate3d(940px, 0, 0);
 }
 
 .cont.s-signup .sign-up {
@@ -301,7 +304,7 @@ nav ul li .btn:hover {
     padding-right: 20px;
     padding-left: 13vh;
     box-sizing: border-box;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(34, 30, 29, 0.5);
     margin-top: -4%;
 }
 
@@ -311,16 +314,17 @@ nav ul li .btn:hover {
     text-decoration: none;
     /* background: rgba(59, 59, 59, 0.8); */
     color: white !important;
-    /* border-radius: 6px; */
+    border-radius: 3px;
 }
 
 .title a:hover {
     border: none !important;
     padding: 11px 42px !important;
     text-decoration: none;
-    background: black;
-    color: white !important;
-    /* border-radius: 6px; */
+    background: #efefef;
+    color: #413b3b !important;
+    font-weight: 600;
+    border-radius: 3px;
 }
 
 
@@ -414,7 +418,7 @@ input[type=submit] {
     margin-top: 20px !important;
     margin-bottom: 20px !important;
     text-transform: uppercase !important;
-    background: black;
+    background: #312d2c;
     font-family: 'Garamond' !important;
     padding-top: 5px;
     /* background: -webkit-linear-gradient(left, #7579ff, #b224ef); */
@@ -425,13 +429,14 @@ input[type=submit] {
     color: #fff;
     font-size: 15px;
     cursor: pointer;
+    border-radius: 3px;
 }
 
 input[type=submit]:hover {
     padding-top: 3px;
     font-size: 15px;
     color: black;
-    border: 2px solid black;
+    border: 2px solid #312d2c;
     font-weight: 600;
     background: none;
     /* background: -webkit-linear-gradient(left, #b224ef, #7579ff); */
@@ -510,7 +515,9 @@ input[type=submit]:hover {
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.9);
+    background: #413b3b;
+    /* rgb(239, 239, 239) */
+    /* background: rgba(0, 0, 0, 0.9); */
 }
 
 .img-text {
@@ -550,7 +557,7 @@ input[type=submit]:hover {
     height: 36px;
     margin: 0 auto;
     background: transparent;
-    color: #fff;
+    color: rgb(239, 239, 239);
     text-transform: uppercase;
     font-size: 15px;
     cursor: pointer;
@@ -564,8 +571,9 @@ input[type=submit]:hover {
     top: 0;
     width: 100%;
     height: 100%;
-    border: 2px solid #fff;
+    border: 2px solid rgb(239, 239, 239);
     /* border-radius: 30px; */
+    border-radius: 3px;
 }
 
 .img-btn span {
