--- a/css/styles.css
+++ b/css/styles.css
@@ -576,6 +576,13 @@ input[type=submit]:hover {
     border-radius: 3px;
 }
 
+.img-btn:hover {
+    color: #3d3d3d;
+    font-weight: 1000;
+    background-color: rgb(239, 239, 239);
+    border-radius: 3px;
+}
+
 .img-btn span {
     position: absolute;
     left: 0;
