--- a/css/gal.css
+++ b/css/gal.css
@@ -1,62 +1,71 @@
-
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@font-face {
+	font-family: "Aadam";
+	src: url("fonts/Aadam-regular.otf");
 }
 
-body{
-    min-height: 100vh;
-    overflow-x: hidden;
-    }
-
-    .main{
-        justify-content: center;
-        align-items: center;
-        margin-top: 10px;
-        width: 100vw;
-        display: grid;
-        grid-template-columns: repeat(auto-fill,minmax(300px, 300px));
-        column-gap: 10px;
-        row-gap: 10px;
-    }
-
-img{
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-    object-position: center;
+@font-face {
+	font-family: "whitneylight";
+	src: url("fonts/whitneylight.otf");
 }
 
-img:hover{
-    opacity: .5;
-    transition: .9s;    
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-h1{
-    text-align: center;
-    font-family: 'Aadam';
-    font-size: 50px;
-    color: rgb(0, 0, 0);
-    text-transform: uppercase;
+body {
+	min-height: 100vh;
+	overflow-x: hidden;
+	background-color: #f8f8f8;
 }
 
-h2{
-    text-align: center;
-    font-family: arial;
-    height: 50px;
-    font-size: 20px;
-    color: rgb(0, 0, 0);
+.main {
+	justify-content: center;
+	align-items: center;
+	margin-top: 10px;
+	width: 100vw;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
+	column-gap: 10px;
+	row-gap: 10px;
 }
 
-.container{
-    margin: 20px auto;
-    padding: 20px;
+img {
+	width: 300px;
+	height: 300px;
+	object-fit: cover;
+	object-position: center;
 }
 
-hr{
-    border: none;
-    height: 1px;
-    background: black;
+img:hover {
+	opacity: 0.5;
+	transition: 0.9s;
+}
+
+h1 {
+	text-align: center;
+	font-family: "whitneylight";
+	font-size: 50px;
+	color: rgb(0, 0, 0);
+	text-transform: uppercase;
+}
+
+h2 {
+	text-align: center;
+	font-family: arial;
+	height: 50px;
+	font-size: 20px;
+	color: rgb(0, 0, 0);
+}
+
+.container {
+	margin: 20px auto;
+	padding: 20px;
+}
+
+hr {
+	border: none;
+	height: 1px;
+	background: black;
 }
