--- a/css/navi.css
+++ b/css/navi.css
@@ -1,3 +1,13 @@
+@font-face {
+	font-family: "whitneylight";
+	src: url("fonts/whitneylight.otf");
+}
+
+@font-face {
+	font-family: "Aadam";
+	src: url("fonts/Aadam-regular.otf");
+}
+
 body {
 	padding: 0;
 	margin: 0;
@@ -16,10 +26,11 @@ nav {
 	left: 0;
 	right: 0;
 	top: 0;
-	font-family: 'Montserrat', sans-serif;
+	font-family: "whitneylight";
+	text-transform: uppercase;
 	padding: 0 4%;
 	height: 90px;
-	background-color:black;
+	background-color: #312d2c;
 }
 nav .logo {
 	float: left;
@@ -31,7 +42,7 @@ nav .logo {
 	color: #fff;
 }
 nav .links {
-	float: center;
+	float: right;
 	padding: 0;
 	margin: 0;
 	width: 800px;
@@ -66,7 +77,7 @@ nav .icon-burger .line {
 	height: 5px;
 	background-color: #fff;
 	margin: 5px;
-	transition: all .3s ease-in-out;
+	transition: all 0.3s ease-in-out;
 }
 @media screen and (max-width: 768px) {
 	nav .logo {
@@ -86,10 +97,10 @@ nav .icon-burger .line {
 		height: auto;
 		flex-direction: column;
 		justify-content: space-evenly;
-		background-color: rgba(0,0,0,.8);
+		background-color: rgba(0, 0, 0, 0.8);
 		overflow: hidden;
 		box-sizing: border-box;
-		transition: all .5s ease-in-out;
+		transition: all 0.5s ease-in-out;
 	}
 	nav .links a {
 		font-size: 20px;
@@ -109,6 +120,4 @@ nav .icon-burger .line {
 	nav :checked ~ .icon-burger .line:nth-child(2) {
 		opacity: 0;
 	}
-	
 }
-
