--- a/css/foot.css
+++ b/css/foot.css
@@ -14,10 +14,11 @@ body {
 	box-sizing: border-box;
 }
 .container {
-	max-width: 1170px;
+	max-width: 100%;
 	margin: auto;
 }
 .row {
+	justify-content: center;
 	display: flex;
 	flex-wrap: wrap;
 }
