--- a/css/gal.css
+++ b/css/gal.css
@@ -57,8 +57,8 @@ h1 {
 
 h2 {
 	text-align: center;
-	font-family: arial;
-	height: 50px;
+	font-family: "whitneylight";
+	height: 30px;
 	font-size: 20px;
 	color: rgb(0, 0, 0);
 }
