--- a/css/accomodation.css
+++ b/css/accomodation.css
@@ -103,8 +103,8 @@ body{
 .room{
     margin: 45px 0;
     padding-bottom: 25px;
-    background: #413b3b;
-    color: #fff;
+    background: #f8f8f8;
+    color: #413b3b;
 }
 .room-text{
     padding: 5px 20px;
@@ -122,7 +122,7 @@ body{
     padding: 7px 0;
 }
 .room-text ul li i{
-    color: var(--#413b3b);
+    color: #413b3b;
     margin-right: 10px;
 
 }
