--- a/css/offers.css
+++ b/css/offers.css
@@ -60,6 +60,32 @@
 	border-color: #fff;
 }
 
+h1 {
+	text-align: center;
+	font-family: "whitneylight";
+	font-size: 50px;
+	color: rgb(0, 0, 0);
+	text-transform: uppercase;
+}
+
+h2 {
+	text-align: center;
+	font-family: "whitneylight";
+	height: 30px;
+	font-size: 20px;
+	color: rgb(0, 0, 0);
+}
+
+hr {
+	border: none;
+	height: 1px;
+	background: black;
+	width: 50%;
+}
+.container {
+	margin: auto;
+}
+
 @media (max-width: 1045px) {
 	.wrapper .box {
 		width: calc(50% - 10px);
