--- a/css/book-now.css
+++ b/css/book-now.css
@@ -29,7 +29,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Garamond';
+    /* font-family: 'Garamond'; */
     width: 100%;
     height: 100vh;
     /* display: flex; */
@@ -56,83 +56,6 @@ body {
     background: url('../assets/1.png');
     background-size: cover;
     background-position: center;
-}
-
-
-/* Navitagion Bar*/
-
-nav {
-    font-family: 'Aadam'!important;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    padding: 10px 20px;
-    box-sizing: border-box;
-    font-size: 16px;
-    /* background: rgba(0, 0, 0, 0.4); */
-    background: none !important;
-    /* font-size: 15px; */
-    /* letter-spacing: 2px; */
-    /* border-bottom: 1px solid #fff; */
-}
-
-nav .logo {
-    padding: 18px 20px;
-    height: 80px;
-    float: left;
-    font-size: 24px;
-    /* font-weight: bold; */
-    color: rgb(0, 0, 0);
-    text-transform: uppercase;
-}
-
-nav ul {
-    list-style: none;
-    float: right;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-nav ul li {
-    line-height: 60px;
-}
-
-nav ul li a {
-    /* color: #fff;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1); */
-    padding: 12px 20px;
-    text-decoration: none;
-    /* font-weight: bold; */
-    /* text-transform: uppercase; */
-    color: black !important;
-    text-shadow: none !important;
-    background: rgba(255, 255, 255, 0.8);
-}
-
-nav ul li a:hover,
-nav ul li .btn:hover {
-    border: 3px solid black;
-    padding: 9px 17px !important;
-    /* background: rgba(59, 59, 59, 0.8); */
-    color: black !important;
-    /* border-radius: 6px; */
-    background: rgba(255, 255, 255, 0.8);
-}
-
-nav ul li .btn {
-    /* color: rgb(0, 0, 0);
-    background: rgba(255, 255, 255, 0.8);
-    text-shadow: none; */
-    padding: 12px 20px;
-    text-decoration: none;
-    /* border-radius: 6px; */
-    /* font-weight: bold; */
-    /* text-transform: uppercase; */
-    color: #fff !important;
-    background: rgba(0, 0, 0, 0.8);
 }
 
 
@@ -414,4 +337,25 @@ form .page .btns button.next {
 .progress-bar .step .check.active {
     display: block;
     color: #fff;
+}
+
+
+/* Responsive */
+
+@media only screen and (max-width:1000px) {
+    .summary {
+        flex: 50%;
+    }
+    .booking {
+        flex: 50%;
+    }
+}
+
+@media (max-width: 767px) {
+    .summary {
+        flex: 100%;
+    }
+    .booking {
+        flex: 100%;
+    }
 }
