--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -8,20 +8,19 @@
 	src: url("fonts/Aadam-regular.otf");
 }
 
-/* 
-body {
-    padding: 0;
-    margin: 0;
-} */
+/* body {
+	padding: 0;
+	margin: 0;
+}
 
-/* .container {
-    position: relative;
-    margin-top: 100px;
-} */
+.container {
+	position: relative;
+	margin-top: 100px;
+}
 
-/* .container img {
-    display: block;
-    width: 100%;
+.container img {
+	display: block;
+	width: 100%;
 } */
 
 nav {
