--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -8,21 +8,6 @@
 	src: url("fonts/Aadam-regular.otf");
 }
 
-/* body {
-	padding: 0;
-	margin: 0;
-}
-
-.container {
-	position: relative;
-	margin-top: 100px;
-}
-
-.container img {
-	display: block;
-	width: 100%;
-} */
-
 nav {
 	position: fixed;
 	z-index: 10;
@@ -47,14 +32,13 @@ nav .logo {
 }
 
 nav .links {
-	float: right;
-	padding: 0;
-	margin: 0;
-	width: 800px;
+	float: left;
+	width: 40%;
 	height: 100%;
 	display: flex;
-	justify-content: space-around;
 	align-items: center;
+	font-size: 24px;
+	color: #fff;
 }
 
 nav .links li {
