--- a/css/book-now.css
+++ b/css/book-now.css
@@ -74,7 +74,6 @@ body {
     /* background: url("bg.png"), -webkit-linear-gradient(bottom, #0250c5, #d43f8d); */
     /* width: 50%; */
     display: block;
-    margin-top: 30px;
 }
 
 
@@ -82,15 +81,15 @@ body {
 
 .index-top {
     width: 100%;
-    height: 70%;
+    height: 55%;
     background: url('../assets/4.jpg');
     background-size: cover;
     background-position: center;
 }
 
 .book-now {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 30px !important;
+    margin-bottom: 30px !important;
 }
 
 
@@ -203,7 +202,7 @@ body {
     /* box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22); */
     /* max-width: 120rem; */
     padding: 1.5rem 1.5rem;
-    margin: auto;
+    margin: 20px auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     align-items: center;
     align-content: center;
@@ -214,7 +213,7 @@ body {
     background: #fff;
     /* border-radius: 5px; */
     padding: 1.5rem 1.5rem;
-    margin: 10px auto;
+    margin: 20px auto;
     width: 90%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 4fr));
