--- a/css/book-now.css
+++ b/css/book-now.css
@@ -98,6 +98,14 @@ body {
 .title {
     float: left;
     color: rgb(0, 0, 0);
+    /* border-bottom: 5px solid #413b3b; */
+}
+
+.title h3 {
+    float: left;
+    color: rgb(0, 0, 0);
+    border-bottom: 5px solid #413b3b;
+    width: 25%;
 }
 
 .title h1 {
@@ -163,6 +171,8 @@ body {
 
 /* Divisions */
 
+
+/* 
 .contact-wrap {
     width: 80%;
     height: auto;
@@ -182,14 +192,14 @@ body {
 }
 
 .contact-in:nth-child(2) {
-    /* flex: 45%; */
-    /* background: #c31432; */
+    flex: 45%;
+    background: #c31432;
 }
 
 .contact-in:nth-child(3) {
     flex: 25%;
     padding: 0;
-}
+} */
 
 .booking .container {
     /* width: 50%; */
@@ -233,6 +243,18 @@ body {
     grid-gap: 20px;
 }
 
+.container-3 {
+    text-align: center;
+    background: #fff;
+    /* border-radius: 5px; */
+    padding: 0 1.5rem;
+    margin: 10px auto;
+    /* width: 90%; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 4fr));
+    grid-gap: 20px;
+}
+
 .container header {
     font-size: 35px;
     font-weight: 600;
@@ -257,9 +279,26 @@ body {
     position: relative;
 }
 
+.half {
+    display: flex;
+}
+
 .output-group {
     position: relative;
     padding: 10px 10px;
+}
+
+.text-group {
+    text-align: left;
+    padding: 10px 80px;
+}
+
+.text-group h4 {
+    font-size: 22px !important;
+}
+
+.text-group p {
+    font-size: 20px !important;
 }
 
 .output-group .details h3 {
@@ -279,6 +318,15 @@ body {
     color: #000;
     font-weight: bold;
     margin-bottom: 1rem;
+}
+
+.input-label-form {
+    display: block;
+    font-size: 1.3rem;
+    /* text-transform: uppercase; */
+    color: #000;
+    font-weight: bold;
+    /* margin-bottom: 1rem; */
 }
 
 .input,
@@ -301,6 +349,82 @@ select {
     cursor: pointer;
     /* border-radius: 5px; */
     /* text-align: center; */
+    margin-bottom: none !important;
+}
+
+.checkbox-text input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkbox-text {
+    display: flex;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+}
+
+
+/* Create the checkmark/indicator (hidden when not checked) */
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+
+/* Style the checkmark/indicator */
+
+.checkbox-text.checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+
+/* On mouse-over, add a grey background color */
+
+.checkbox-text:hover input~.checkmark {
+    background-color: #ccc;
+}
+
+
+/* When the checkbox is checked, add a blue background */
+
+.checkbox-text input:checked~.checkmark {
+    background-color: #413b3b;
+}
+
+
+/* Show the checkmark when checked */
+
+.checkbox-text input:checked~.checkmark:after {
+    display: block;
 }
 
 .select:focus,
@@ -320,12 +444,13 @@ select:hover {
     font-size: 25px;
     font-weight: 500;
     margin: 20px 20px;
+    /* border-width: 50%; */
 }
 
 .form-outer .form-form .page .field {
     width: 330px;
     height: 45px;
-    margin: 45px 0;
+    margin: 45px 30px;
     display: flex;
     position: relative;
     /* display: block; */
@@ -517,6 +642,9 @@ select:hover {
     .index-top {
         height: 50%;
     }
+    .title h3 {
+        width: 50%;
+    }
 }
 
 @media only screen and (max-width:1000px) {
@@ -533,5 +661,23 @@ select:hover {
     }
     .index-top {
         height: 50%;
+    }
+    .container-3 {
+        grid-template-columns: repeat(auto-fit, minmax(500px, 2fr));
+    }
+}
+
+@media only screen and (max-width:750px) {
+    .title h3 {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width:700px) {
+    .title h3 {
+        width: 100%;
+    }
+    .container-3 {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 2fr));
     }
 }
