--- a/css/user.css
+++ b/css/user.css
@@ -1,193 +1,227 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  font-family: sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
-.wrapper{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  width: 1000px;
-  display: flex;
-  box-shadow: 0 1px 20px 0 rgba(69,90,100,.08);
+body {
+	height: 100vh;
+	display: grid;
+	align-items: center;
+	font-family: "Poppins", sans-serif;
 }
 
-.wrapper .left{
-  width: 25%;
-  background: #413b3b;
-  padding: 30px 25px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  text-align: center;
-  color: #fff;
-  }
-
-.wrapper .left img{
-  border-radius: 5px;
-  margin-bottom: 10px;
-  width: 200px;
-  height: 200px;
+.contact-us {
+	padding-top: 8rem;
+	padding-bottom: 20px;
 }
 
-.wrapper .left h3{
-  margin-bottom: 10px;
-  font-weight: bold;
+.contact-wrap {
+	width: 80%;
+	height: auto;
+	margin: auto;
+	display: flex;
+	flex-wrap: wrap;
 }
 
-.wrapper .left p{
-  font-size: 12px;
+.contact-in {
+	padding: 30px 20px;
 }
 
-.wrapper .right{
-  width:70%;
-  background: #fff;
-  padding: 30px 20px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+.contact-in p {
+	margin-left: 60px;
 }
 
-.wrapper .right .info,
-.wrapper .right .projects{
-  margin-bottom: 25px;
+.contact-in:nth-child(1) {
+	flex: 30%;
+	background: url(../images/1.jpg);
+	color: #312d2c;
 }
 
-.wrapper .right .info h3,
-.wrapper .right .projects h3{
-    margin-bottom: 15px;
-    padding-bottom: 5px;
-    border-bottom: 1px solid #e0e0e0;
-    color: #353c4e;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  font-weight: bold;
-}
-.wrapper .right .info .info_data h4{
-	font-weight: bold;
+.contact-in:nth-child(2) {
+	/* flex: 45%; */
+	/* background: #c31432; */
 }
 
-.wrapper .right .info_data{
-  display: flex;
+.contact-in:nth-child(3) {
+	flex: 25%;
+	padding: 0;
 }
 
-.rwd-table {
-  margin: auto;
-  min-width: 200px;
-  max-width: 1000px;
-  border-collapse: collapse;
+.contact-in h1 {
+	font-size: 24px;
+	color: #312d2c;
+	text-transform: uppercase;
+	font-weight: 500;
+	margin-bottom: 20px;
+	border-bottom: 5px solid #413b3b;
 }
 
-.rwd-table tr:first-child {
-  border-top: none;
-  background: #312d2c;
-  color: #fff
+.contact-in h2 {
+	font-size: 20px;
+	font-weight: 400;
+	margin-bottom: 15px;
 }
 
-.rwd-table tr {
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: white;
+.contact-in h2 i {
+	font-size: 16px;
+	width: 40px;
+	height: 40px;
+	margin-right: 10px;
+	background: #f5f5f5;
+	color: #312d2c;
+	border-radius: 50px;
+	line-height: 40px;
+	text-align: center;
 }
 
-.rwd-table tr:nth-child(odd):not(:first-child) {
-  background-color: #f2f3f4;
+.contact-in p {
+	font-size: 14px;
+	font-weight: 300;
+	margin-bottom: 20px;
 }
 
-.rwd-table th {
-  display: none;
+.contact-in ul {
+	padding: 0;
+	margin: 0;
 }
 
-.rwd-table td {
-  display: block;
+.contact-in ul li {
+	list-style: none;
+	display: inline-block;
+	margin-right: 5px;
+	margin-top: 5px;
 }
 
-.rwd-table td:first-child {
-  margin-top: .5em;
+.contact-in ul li a {
+	display: block;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	background: #312d2c;
+	border-radius: 50px;
 }
 
-.rwd-table td:last-child {
-  margin-bottom: .5em;
+.contact-in ul li a i {
+	font-size: 14px;
+	line-height: 30px;
+	color: #312d2c;
 }
 
-.rwd-table td:before {
-  content: attr(data-th) ": ";
-  font-weight: bold;
-  width: 120px;
-  display: inline-block;
-  color: #000;
+.contact-in form {
+	width: 100%;
+	height: auto;
 }
 
-.rwd-table th,
-.rwd-table td {
-  text-align: left;
+.contact-in-input {
+	width: 100%;
+	height: 40px;
+	margin-bottom: 20px;
+	border: 1px solid #312d2c;
+	outline: none;
+	padding-left: 5px;
+	background: transparent;
+	color: #312d2c;
+	font-size: 12px;
+	font-weight: 300;
+	font-family: "Poppins", sans-serif;
 }
 
-.rwd-table {
-  color: #333;
-  border-radiuds: .4em;
-  overflow: hidden;
+.contact-in-input::placeholder {
+	color: #312d2c;
 }
 
-.rwd-table tr {
-  border-color: #bfbfbf;
+.contact-in-textarea {
+	width: 100%;
+	height: 140px;
+	margin-bottom: 20px;
+	border: 1px solid #312d2c;
+	outline: none;
+	padding-top: 5px;
+	padding-left: 5px;
+	background: transparent;
+	color: #312d2c;
+	font-size: 12px;
+	font-weight: 300;
+	font-family: "Poppins", sans-serif;
+	resize: none;
 }
 
-.rwd-table th,
-.rwd-table td {
-  padding: .5em 1em;
-}
-@media screen and (max-width: 601px) {
-  .rwd-table tr:nth-child(2) {
-    border-top: none;
-  }
-}
-@media screen and (min-width: 600px) {
-  .rwd-table tr:hover:not(:first-child) {
-    background-color: #d3d3d3;
-  }
-  .rwd-table td:before {
-    display: none;
-  }
-  .rwd-table th,
-  .rwd-table td {
-    display: table-cell;
-    padding: .25em .5em;
-  }
-  .rwd-table th:first-child,
-  .rwd-table td:first-child {
-    padding-left: 0;
-  }
-  .rwd-table th:last-child,
-  .rwd-table td:last-child {
-    padding-right: 0;
-  }
-  .rwd-table th,
-  .rwd-table td {
-    padding: 1em !important;
-  }
-
-.wrapper .right .projects a{
-color: black;}
-
-.wrapper .right .projects a:hover{
-	color:	#f2f2f2;
+.contact-in-textarea::placeholder {
+	color: #312d2c;
 }
 
-.wrapper .left button{
-    margin-left: 0;
-    margin-right: 0;
-    background-color: #312d2c;
-	color: white;
+.contact-in-btn {
+	width: 100%;
+	height: 40px;
+	/* border: 1px solid #312d2c; */
+	outline: none;
+	/* background: transparent; */
+	/* color: #312d2c; */
+	font-size: 12px;
+	font-weight: 300;
+	font-family: "Poppins", sans-serif;
+	cursor: pointer;
+	/* width: 100%; */
+	/* height: 40px; */
+	/* background-color: #221e1d; */
+	background-color: #413b3b;
+	/* border: none; */
+	border-radius: 3px;
+	color: #ffffff;
+	text-transform: uppercase;
+	margin-top: 10px;
+	font-size: 16px;
+	cursor: pointer;
 }
 
-.wrapper .left button:hover{
-	background-color: #656565;
-	color: white;
+.contact-in iframe {
+	width: 100%;
+	height: 100%;
 }
 
+input [type="submit"] {
+	/* width: 100%; */
+	/* height: 40px; */
+	/* background-color: #221e1d; */
+	background-color: #413b3b;
+	/* border: none; */
+	border-radius: 3px;
+	color: #ffffff;
+	text-transform: uppercase;
+	margin-top: 10px;
+	font-size: 16px;
+	cursor: pointer;
+}
+
+.contact-in-btn:hover {
+	border: 2px solid #413b3b;
+	font-weight: 500;
+	background: none;
+	color: #413b3b;
+}
+
+@media only screen and (max-width: 1000px) {
+	.contact-in:nth-child(1) {
+		flex: 50%;
+	}
+	.contact-in:nth-child(2) {
+		flex: 50%;
+	}
+	.contact-in:nth-child(3) {
+		flex: 100%;
+	}
+}
+
+@media (max-width: 767px) {
+	.contact-in:nth-child(1) {
+		flex: 100%;
+	}
+	.contact-in:nth-child(2) {
+		flex: 100%;
+	}
+	.contact-in:nth-child(3) {
+		flex: 100%;
+	}
 }
